src/main/java/com/example/team2_be/core/error/exception/Exception500.java
package com.example.team2_be.core.error.exception;

import lombok.Getter;
import org.springframework.http.HttpStatus;

@Getter
public class Exception500 extends ApiException {
    public Exception500(String message) {
        super(message);
    }

    @Override
    public HttpStatus getStatus() {
        return HttpStatus.INTERNAL_SERVER_ERROR;
    }
}
